[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "locloc"
version = "0.0.5"
description = "Online LOC counter"
readme = "README.md"
keywords = [
  "loc",
  "web",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115.6,<0.116",
  "gitpython>=3.1.44,<4",
  "jinja2>=3.1.5,<4",
  "pydantic>=2.10.5,<3",
  "pygal>=3.0.5,<4",
  "pytokei>=0.2,<0.3",
  "slowapi @ git+https://github.com/laurentS/slowapi",
  "timeout-decorator>=0.5,<0.6",
  "uvicorn>=0.34,<0.35",
]
urls.Repository = "https://github.com/eggplants/locloc"
scripts.locloc-server = "locloc.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "locloc" },
]
include = [
  { path = "locloc/static_files", format = [
    "sdist",
    "wheel",
  ] },
  { path = "locloc/templates", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<7"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
target-version = [
  'py39',
]

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  "D",
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.pytype]
python_version = '3.10'
jobs = '4'
report_errors = true
precise_return = true
protocols = true
strict_import = true

[tool.taskipy.tasks]
start = "uvicorn locloc.main:app"
dev = "uvicorn locloc.main:app --reload"
test = "pytest --cov=locloc --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
