[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "locloc"
# dynamic = [ "version" ]
version = "0.1.4"
description = "Online LOC counter"
readme = "README.md"
keywords = [
  "loc",
  "web",
]
license = "MIT"
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.13,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115.6,<0.137",
  "gitpython>=3.1.47,<4",
  "jinja2>=3.1.5,<4",
  "pydantic>=2.10.5,<3",
  "pygal>=3.0.5,<4",
  "pytokei==1.0.1",
  "timeout-decorator>=0.5,<0.6",
  "uvicorn>=0.34,<0.47",
]
urls.Repository = "https://github.com/eggplants/locloc"
scripts.locloc-server = "locloc.main:main"

[dependency-groups]
dev = [
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch]
build.targets.sdist.include = [
  "locloc",
  "locloc/static_files",
  "locloc/templates",
]
build.targets.wheel.include = [
  "locloc",
  "locloc/static_files",
  "locloc/templates",
]
metadata.allow-direct-references = true
version.source = "uv-dynamic-versioning"

[tool.uv]
python-downloads = "never"
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"
exclude-newer-package = { pytokei = "P1D" }
preview = true

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]
lint.ignore = [ "COM812" ]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[tool.taskipy]
tasks.start = "uvicorn locloc.main:app"
tasks.dev = "uvicorn locloc.main:app --reload"
